# AGES-industria-digital-backend

./: .gitignore  Dockerfile  README.md  branch-linter.sh  commit-msg-linter.sh  docker-compose.yml  package-lock.json  pyproject.toml  sampled_cnpj_db.pgsql
.husky/: commit-msg  pre-commit
app/: main.py
app/api/routers/: example_router.py
app/api/schemas/: example_schemas.py
app/database/: database.py  models.py
app/database/sql_files/: treatment.sql
app/scripts/: data_transfer.py  sample_models.py
industria-digital-backend/: pyproject.toml
