[tool.poetry]
name = "industria-digital-backend"
version = "0.1.0"
description = ""
authors = ["guibg <gui.bgoulart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
